--- a/app/customer/display.html
+++ b/app/customer/display.html
@@ -10,84 +10,27 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: url('logo.png') center center / cover no-repeat fixed;
-      height: 100vh;
+      background: black;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      color: #fff;
-      overflow: hidden;
+      align-items: center;
+      height: 100vh;
+      color: white;
+      font-family: sans-serif;
     }
-
-    #message {
-      font-size: 1.6em;
+    #qrcode-container {
       text-align: center;
-      margin-bottom: 30px;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 20px;
-      border-radius: 12px;
     }
-
-    #qrcode {
+    canvas {
       width: 300px;
       height: 300px;
-      background: white;
-      padding: 20px;
-      border-radius: 20px;
-      display: none;
-    }
-
-    .loader {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: white;
-      color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 9999;
-    }
-
-    .loader.show {
-      display: flex;
-    }
-
-    .loader .dot {
-      width: 12px;
-      height: 12px;
-      margin: 3px;
-      background: #66a6ff;
-      border-radius: 50%;
-      display: inline-block;
-      animation: bounce 1.4s infinite ease-in-out both;
-    }
-
-    .loader .dot:nth-child(2) { animation-delay: 0.2s; }
-    .loader .dot:nth-child(3) { animation-delay: 0.4s; }
-
-    @keyframes bounce {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
     }
   </style>
 </head>
 <body>
-
-  <div id="message">しばらくお待ちください...<br>QRコードを準備しています。</div>
-  <canvas id="qrcode"></canvas>
-
-  <div class="loader" id="loader">
-    <div style="display:flex;gap:5px;">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
-    <p>読み取り確認中...</p>
+  <div id="qrcode-container">
+    <p id="status">準備中...</p>
+    <canvas id="qrcode"></canvas>
   </div>
 
   <script>
@@ -103,52 +46,29 @@
     const db = firebase.firestore();
 
     const table = new URLSearchParams(location.search).get("table");
-    const docRef = db.collection("display_queue").doc(`table_${table}`);
+    const docRef = db.collection("display_queue").doc(table_${table});
+    const statusEl = document.getElementById("status");
 
-    const qrcodeEl = document.getElementById("qrcode");
-    const messageEl = document.getElementById("message");
-    const loaderEl = document.getElementById("loader");
-
-    let hasShownQR = false;
-    let hasScanned = false;
-
-    docRef.onSnapshot((doc) => {
+    docRef.onSnapshot(async (doc) => {
       const data = doc.data();
       if (!data || !data.url) {
-        // QRが送られていない
-        messageEl.innerHTML = "しばらくお待ちください...<br>QRコードを準備しています。";
-        qrcodeEl.style.display = "none";
-        loaderEl.classList.remove("show");
+        statusEl.textContent = "QRコードを待っています...";
         return;
       }
 
       const now = new Date();
       if (new Date(data.expiresAt) < now) {
-        messageEl.textContent = "QRコードの有効期限が切れました";
-        qrcodeEl.style.display = "none";
-        loaderEl.classList.remove("show");
+        statusEl.textContent = "有効期限切れ";
         return;
       }
 
-      if (data.status === "waiting" && !hasShownQR) {
-        // QRコードを表示
-        QRCode.toCanvas(qrcodeEl, data.url, function () {
-          qrcodeEl.style.display = "block";
-          messageEl.textContent = `テーブル${data.table}のQRコードを読み取ってください`;
-          hasShownQR = true;
-        });
+      if (data.status === "waiting") {
+        QRCode.toCanvas(document.getElementById("qrcode"), data.url);
+        statusEl.textContent = テーブル${data.table} 入店QRコード;
       }
 
-      if (data.status === "scanned" && !hasScanned) {
-        // ローディング表示 → 遷移
-        hasScanned = true;
-        qrcodeEl.style.display = "none";
-        messageEl.style.display = "none";
-        loaderEl.classList.add("show");
-
-        setTimeout(() => {
-          window.location.href = `menu.html?table=${table}`;
-        }, 3000);
+      if (data.status === "scanned") {
+        window.location.href = menu.html?table=${table};
       }
     });
   </script>
