--- a/app/customer/display.html
+++ b/app/customer/display.html
@@ -10,70 +10,27 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      background: url("logo.png") center center / cover no-repeat fixed;
-      color: white;
+      background: black;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      flex-direction: column;
+      color: white;
+      font-family: sans-serif;
+    }
+    #qrcode-container {
       text-align: center;
     }
-
-    #message {
-      font-size: 1.8em;
-      margin-bottom: 30px;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 20px 30px;
-      border-radius: 12px;
-    }
-
-    #qrcode {
-      display: none;
-      background: white;
-      padding: 20px;
-      border-radius: 20px;
-    }
-
-    .loader {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 30px;
-    }
-
-    .dot {
-      width: 12px;
-      height: 12px;
-      background: #fff;
-      margin: 5px;
-      border-radius: 50%;
-      display: inline-block;
-      animation: bounce 1.4s infinite ease-in-out both;
-    }
-
-    .dot:nth-child(2) { animation-delay: 0.2s; }
-    .dot:nth-child(3) { animation-delay: 0.4s; }
-
-    @keyframes bounce {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
+    canvas {
+      width: 300px;
+      height: 300px;
     }
   </style>
 </head>
 <body>
-
-  <div id="message">しばらくお待ちください…<br>QRコードを準備中です。</div>
-  <canvas id="qrcode" width="300" height="300"></canvas>
-
-  <div class="loader" id="loader">
-    <div style="display: flex;">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
-    <div style="margin-top:10px;">読み取り確認中…</div>
+  <div id="qrcode-container">
+    <p id="status">準備中...</p>
+    <canvas id="qrcode"></canvas>
   </div>
 
   <script>
@@ -90,53 +47,28 @@
 
     const table = new URLSearchParams(location.search).get("table");
     const docRef = db.collection("display_queue").doc(`table_${table}`);
+    const statusEl = document.getElementById("status");
 
-    const qrcodeCanvas = document.getElementById("qrcode");
-    const messageEl = document.getElementById("message");
-    const loaderEl = document.getElementById("loader");
-
-    let qrDisplayed = false;
-    let scannedTriggered = false;
-
-    docRef.onSnapshot((doc) => {
+    docRef.onSnapshot(async (doc) => {
       const data = doc.data();
       if (!data || !data.url) {
-        messageEl.innerHTML = "しばらくお待ちください…<br>QRコードを準備中です。";
-        qrcodeCanvas.style.display = "none";
-        loaderEl.style.display = "none";
+        statusEl.textContent = "QRコードを待っています...";
         return;
       }
 
       const now = new Date();
       if (new Date(data.expiresAt) < now) {
-        messageEl.textContent = "QRコードの有効期限が切れています。";
-        qrcodeCanvas.style.display = "none";
-        loaderEl.style.display = "none";
+        statusEl.textContent = "有効期限切れ";
         return;
       }
 
-      if (data.status === "waiting" && !qrDisplayed) {
-        QRCode.toCanvas(qrcodeCanvas, data.url, function (err) {
-          if (err) {
-            messageEl.textContent = "QRコードの生成に失敗しました";
-            return;
-          }
-          messageEl.innerHTML = `テーブル${data.table}：QRコードを読み取ってください`;
-          qrcodeCanvas.style.display = "block";
-          loaderEl.style.display = "none";
-          qrDisplayed = true;
-        });
+      if (data.status === "waiting") {
+        QRCode.toCanvas(document.getElementById("qrcode"), data.url);
+        statusEl.textContent = `テーブル${data.table} 入店QRコード`;
       }
 
-      if (data.status === "scanned" && !scannedTriggered) {
-        scannedTriggered = true;
-        messageEl.style.display = "none";
-        qrcodeCanvas.style.display = "none";
-        loaderEl.style.display = "flex";
-
-        setTimeout(() => {
-          window.location.href = `menu.html?table=${table}`;
-        }, 3000); // ローディング後に遷移
+      if (data.status === "scanned") {
+        window.location.href = `menu.html?table=${table}`;
       }
     });
   </script>
