--- a/app/customer/menu.html
+++ b/app/customer/menu.html
@@ -83,7 +83,7 @@
     const table = new URLSearchParams(location.search).get("table");
     document.getElementById("table-number").textContent = `テーブル番号: ${table}`;
     document.getElementById("exitBtn").onclick = () => {
-      window.location.href = `exit.html?table=${table}`;
+      window.location.href = `generate_exit.html`;
     };
   </script>
 </body>
