--- a/app/customer/generate_exit.html
+++ b/app/customer/generate_exit.html
@@ -65,7 +65,7 @@
 
     (async () => {
       const token = await generateToken();
-      const url = `https://qr-webpage.vercel.app/register/exit.html?token=${token}`;
+      const url = `https://qr-webpage.vercel.app/app/register/exit.html?token=${token}`;
       const expiresAt = new Date(Date.now() + 30 * 60 * 1000).toISOString(); // 30分有効
 
       // Firestore に保存
